# router/router.go
@@ -71,12 +71,13 @@ func register(router *gin.Engine) {
 	router.PUT("/api/admin/update", controller.UpdateSysAdmin)
 	router.DELETE("/api/admin/delete", controller.DeleteSysAdminById)
 	router.PUT("/api/admin/updateStatus", controller.UpdateSysAdminStatus)
-	// router.PUT("/api/admin/updatePassword", controller.ResetSysAdminPassword)
+	router.PUT("/api/admin/updatePassword", controller.ResetSysAdminPassword)
 	// router.GET("/api/admin/list", controller.GetSysAdminList)
 	// router.POST("/api/upload", controller.Upload)
 	// router.PUT("/api/admin/updatePersonal", controller.UpdatePersonal)
 	// router.PUT("/api/admin/updatePersonalPassword", controller.UpdatePersonalPassword)
-	// router.GET("/api/sysLoginInfo/list", controller.GetSysLoginInfoList)
+
+		// router.GET("/api/sysLoginInfo/list", controller.GetSysLoginInfoList)
 	// router.DELETE("/api/sysLoginInfo/batch/delete", controller.BatchDeleteSysLoginInfo)
 	// router.DELETE("/api/sysLoginInfo/delete", controller.DeleteSysLoginInfoById)
 	// router.DELETE("/api/sysLoginInfo/clean", controller.CleanSysLoginInfo)
